--- a/files/css/style.css
+++ b/files/css/style.css
@@ -55,14 +55,28 @@ p.footer{
     -webkit-box-shadow: 0 0 8px #D0D0D0;
 }
 
-table.lst, td.lstc, th.lsth
+table.lst
 {
     border-collapse:collapse;
+}
+
+td.lstc, th.lsth
+{
     border:1px solid #D0D0D0;
     padding:5px;
     text-align:center;
 }
+
 th.lsth
 {
     background-color:#f9f9f9;
+}
+
+table.notes
+{
+    border-collapse:collapse;
+    border:1px solid #D0D0D0;
+    background-color:#FFFF00;
+    font-size: 10px;
+    width:180px;
 }
