--- a/files/css/login.css
+++ b/files/css/login.css
@@ -7,7 +7,7 @@
 */
 
 body { 
-    background: #B6B6B6;
+    background: #E9E9E9;
     margin: 0;
     padding: 0;
     font-family: Arial;
@@ -15,8 +15,8 @@ body {
 
 #login_form {
     width: 300px;
-    background: #F0F0F0 url(..img/login_bg.jpg);
-    border: 1px solid white;
+    background: #FFF url(..img/login_bg.jpg);
+    border: 1px solid #D0D0D0;
     margin: 150px auto 0;
     padding: 1em;
     -moz-border-radius:  3px;
@@ -24,6 +24,8 @@ body {
 }
 
 h1,h2,h3,h4,h5 {
+    color: #002166;
+    background-color: transparent;
     margin-top: 0;
     font-family: Arial Black, Arial;
     text-align: center;
@@ -33,10 +35,11 @@ input[type=text], input[type=password] {
     display: block;
     margin: 0 0 1em 0;
     width: 270px;
-    border: 5px;
+    border: 1px solid #D0D0D0;
     -moz-border-radius:  1px;
     -webkit-border-radius: 1px;
     padding: 1em;
+    background-color: #F9F9F9;
 }
 
 input[type=submit] {
@@ -47,7 +50,7 @@ input[type=submit] {
     font-size: 12px;
     -moz-border-radius:  4px;
     -webkit-border-radius: 4px;
-    background: #348075;
+    background: #002166;
     color: white;
     box-shadow: 0 1px 0 white;
     -moz-box-shadow: 0 1px 0 white;
@@ -62,7 +65,7 @@ form a {
     font-size: 12px;
     -moz-border-radius:  4px;
     -webkit-border-radius: 4px;
-    background: #348075;
+    background: #002166;
     color: white;
     box-shadow: 0 1px 0 white;
     -moz-box-shadow: 0 1px 0 white;
@@ -70,7 +73,7 @@ form a {
 }
 
 input[type=submit]:hover, form a:hover {
-    background: #287368;
+    background: #002199;
     cursor: pointer;
 }
 
